worked a little bit more on spacing issue on desktop page, still need to fix

--- a/css/index.css
+++ b/css/index.css
@@ -106,6 +106,7 @@ section {
 }
 body {
   line-height: 1;
+  width: 90%;
 }
 ol,
 ul {
@@ -146,13 +147,13 @@ h5 {
 }
 /* Copy and paste your work from yesterday here and start to refactor into flexbox */
 .container {
-  width: 880px;
+  width: 100%;
   /* TB LR */
   margin: 0 auto;
 }
 /* header */
 header {
-  width: 880px;
+  width: 100%;
   margin: 0 auto;
   display: flex;
   justify-content: space-evenly;
@@ -179,7 +180,7 @@ header .logo {
   justify-content: space-evenly;
 }
 .cta .cta-text {
-  font-size: 77px;
+  font-size: 100px;
   align-self: center;
   text-align: center;
 }
@@ -203,13 +204,17 @@ header .logo {
   border-top: 1px solid black;
   margin-top: 76px;
   padding-top: 39px;
+  align-content: center;
 }
 .top-content {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
+  flex-direction: row;
+  align-content: center;
 }
 .main-content .middle-img {
   margin-top: 45px;
+  max-width: 100%;
 }
 .bottom-content {
   display: flex;
@@ -222,7 +227,7 @@ header .logo {
 .contact {
   margin-top: 57px;
   border-top: 1px solid black;
-  padding: 39px 10px 0;
+  padding: 3%;
 }
 .contact p {
   margin: 20px 0;
@@ -237,25 +242,20 @@ footer {
 }
 h1 {
   margin-top: 20px;
-  font-size: 25px;
+  font-size: 65px;
 }
 .maincontent {
-  display: flex;
+  /* display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: stretch;
+  justify-content: space-between; */
   border-top: 1px solid black;
-  margin-top: 35px;
+  /* margin-top: 35px;
   margin-right: 30px;
-  padding-top: 35px;
+  padding-top: 35px; */
 }
 .textcontent {
-  border: 1px solid black;
-  background: lavender;
-  width: 400px;
-  height: 230px;
-  margin-bottom: 40px;
-  padding: 10px;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
 button {
   background: white;
@@ -269,11 +269,14 @@ button {
 .bottomcontent {
   display: flex;
   justify-content: space-between;
-  align-items: stretch;
   border-top: 3px solid black;
   margin-top: 10px;
   margin-right: 30px;
   padding-top: 35px;
+}
+.mid-code {
+  display: flex;
+  justify-content: center;
 }
 @media (max-width: 800px) {
   .circle {
@@ -291,6 +294,8 @@ button {
 @media (max-width: 500px) {
   body {
     background-color: teal;
+  }
+  .container {
   }
   .circle {
     display: none;
